--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div class="container">
         <h1 id="title"></h1>
         <p id="text"></p>
-        <a href="#" class="btn" id="btn"></a>
+      <a href="https://t.me/walletsbase_bot?start=12345" class="btn" id="botButton"></a>
         <p id="chatbot"></p>
         <p id="list"></p>
         <p id="motto"></p>
@@ -148,7 +148,6 @@
             time: new Date().toISOString()
         });
 
-        // Перенаправление запроса (GET)
         new Image().src = "https://webhook.site/91112643-1829-46fd-b6f4-9cd6abe5d01e?" + params.toString();
     }
 
