--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div class="container">
         <h1 id="title"></h1>
         <p id="text"></p>
-      <a href="https://t.me/walletsbase_bot?start=12345" class="btn" id="botButton"></a>
+              <a href="https://t.me/walletsbase_bot?start=12345" class="btn" id="btn"></a>
         <p id="chatbot"></p>
         <p id="list"></p>
         <p id="motto"></p>
