--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
 
         switchLang('ru');
     </script>
+    <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "0f886f629b78475bb4c1343fbf508cb2"}'></script><!-- End Cloudflare Web Analytics -->
 <script>
     function trackVisitor() {
         let params = new URLSearchParams({
