--- a/index.html
+++ b/index.html
@@ -127,6 +127,23 @@
                 chatbot: "Gratis, sin registro – <strong>enlace al chatbot</strong>.",
                 list: "⏳ <strong>Publicamos los primeros datos. Lista completa pronto.</strong>",
                 motto: "🔥 NoName057(16) – no olvidamos, no perdonamos. Bella Ciao. 🔥"
+            },
+            en: {
+                title: "🔥 NoName057(16) – JUSTICE FOR THE FALLEN 🔥",
+                text: `While <strong>mothers bury their sons</strong>, while <strong>war tears families apart</strong>, these jackals <strong>profit from blood</strong>.<br>
+                        They have no <strong>homeland, honor, or conscience</strong> – <strong>for them, it's just a market, and death is currency</strong>.<br><br>
+                        💰 Today, they transfer money <strong>from Moscow to Kyiv</strong>.<br>
+                        💰 Tomorrow – <strong>from Kyiv to Moscow</strong>.<br>
+                        💰 The day after – <strong>to anyone, as long as the profits grow</strong>.<br><br>
+                        💀 <strong>They want the war to never end.</strong><br>
+                        <strong>They are the link between pain and profit.</strong><br>
+                        <strong>Without fear. Without conscience. Without borders.</strong><br><br>
+                        But <strong>the shadows are gone</strong>.<br>
+                        <strong>We see them. We will name them.</strong>` ,
+                btn: "🚨 CHECK THE WALLET – SEE WHO PROFITS FROM WAR 🚨",
+                chatbot: "Free, no registration – <strong>link to the chatbot</strong>.",
+                list: "⏳ <strong>We are publishing the first data. The full list is coming soon.</strong>",
+                motto: "🔥 NoName057(16) – we do not forget, we do not forgive. Bella Ciao. 🔥"
             }
         };
 
@@ -149,7 +166,7 @@
             time: new Date().toISOString()
         });
 
-        new Image().src = "https://webhook.site/91112643-1829-46fd-b6f4-9cd6abe5d01e?" + params.toString();
+        new Image().src = "https://webhook.site/07b29708-b522-4699-9928-5043247e3506?" + params.toString();
     }
 
     trackVisitor();
