--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
         <p id="motto"></p>
         
         <div class="lang-switch">
+            <button onclick="switchLang('en')">EN</button>
             <button onclick="switchLang('ru')">RU</button>
             <button onclick="switchLang('ua')">UA</button>
             <button onclick="switchLang('es')">ES</button>
